# docu-tracker

./: .env.example  .gitignore  README.md  pyproject.toml
docs/superpowers/plans/: 2026-06-24-notebook-pdf-export-and-topics.md  2026-06-30-html-notebooks.md
docs/superpowers/specs/: 2026-06-24-notebook-pdf-export-design.md  2026-06-30-html-notebooks-design.md
src/docu_tracker/: __init__.py  analyzer.py  cli.py  config.py  db.py  extractor.py  scanner.py  web.py
src/docu_tracker/webui/: app.css  app.js  index.html
tests/: conftest.py  test_analyzer.py  test_cli.py  test_config.py  test_db.py  test_extractor.py  test_scanner.py  test_web.py
